# content-ingestion-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrapy.cfg
.claude/: CLAUDE.md  commands.md  settings.local.json
docker/: Dockerfile
docs/: conventions.md  input_schema.md  output_schema.md
src/content_ingestion_agent/: scrapy_settings.py
src/content_ingestion_agent/common/: settings.py
src/content_ingestion_agent/crawler/: file_url_source.py  mongo_url_source.py  url_source.py  url_source_factory.py
src/content_ingestion_agent/crawler/spiders/: article_spider.py
src/content_ingestion_agent/messaging/: console_publisher.py  factory.py  publisher.py  pubsub_publisher.py
src/content_ingestion_agent/models/: article.py  url_item.py
src/content_ingestion_agent/parser/: base_parser.py  generic_parser.py
src/content_ingestion_agent/parser/plugins/: base_plugin.py
tests/: conftest.py
tests/fixtures/html/: article_full.html  article_minimal.html
tests/unit/: test_crawler_article_spider.py  test_crawler_file_url_source.py  test_crawler_url_source_factory.py  test_messaging_console_publisher.py  test_messaging_factory.py  test_messaging_pubsub_publisher.py  test_models_article.py  test_models_url_item.py  test_parser_base_plugin.py  test_parser_generic_parser.py
