[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "content-ingestion-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "scrapy>=2.11",
    "scrapy-playwright>=0.0.40",
    "playwright>=1.44",
    "trafilatura>=1.12",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pymongo>=4.7",
    "google-cloud-pubsub>=2.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/content_ingestion_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
